--- a/SLROnToleranceInMDE/.classpath
+++ b/SLROnToleranceInMDE/.classpath
@@ -2,8 +2,15 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="xtend-gen"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src-gen"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="lib" path="C:/Users/admin/git/SLR/MSLGeneration/SLROnToleranceInMDE/lib/jackson-core-2.2.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/git/SLR/MSLGeneration/SLROnToleranceInMDE/lib/jackson-databind-2.10.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/git/SLR/MSLGeneration/SLROnToleranceInMDE/lib/json-20190722.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
